chore: switch to Gradle 4.10, fix dependencies
 - Gradle 4 migration
 - Fix dependencies (junit still used)
 - Fix test for JDK 8 (hashCode)
 - switch to OpenJDK 8